tests/EtaX/EtaX.meth/EtaX.meth.2.13-new.check
// exitCode: 0   val t3a: () => Any = meth                   // eta-expansion, but lint warning
// exitCode: 0   val t3Sam0S: Sam0S = meth                   // err??/warn/succ: -Xlint:eta-zero + -Xlint:eta-sam, no eta-expansion w/o 2.14?
// exitCode: 0   val t3Sam0J: Sam0J = meth                   // err??/warn/succ: -Xlint:eta-zero, no eta-expansion w/o 2.14?
// exitCode: 0   val t3b: Any       = { val t = meth   ; t } // ?/succ/warn: apply, ()-insertion
target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.03.scala:12: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method meth,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function.
  val t3b: Any       = { val t = meth   ; t } // ?/succ/warn: apply, ()-insertion
                                 ^
1 warning
// exitCode: 0   val t3c: () => Any = meth _                 // ok
// exitCode: 0   val t3d: () => Any = { val t = meth _ ; t } // ok?/ok
// exitCode: 0   val t3e: Any       = meth _                 // ok
// exitCode: 1   val t3f: Any       = meth() _               // error: _ must follow method
target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.07.scala:16: error: _ must follow method; cannot follow String
  val t3f: Any       = meth() _               // error: _ must follow method
                           ^
1 error
